--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -27,29 +27,29 @@
 
     <android.support.design.widget.TextInputLayout
         style="@style/Widget.TextInputLayout"
-        android:id="@+id/email_input"
+        android:id="@+id/mobileInput"
         android:layout_marginTop="48dp"
         app:layout_constraintTop_toBottomOf="@+id/logo"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
         <android.support.design.widget.TextInputEditText
             style="@style/Widget.TextEdit"
-            android:id="@+id/email_input_edit"
-            android:hint="@string/email_hint"
+            android:id="@+id/mobileInputEt"
+            android:hint="@string/mobile_hint"
             android:inputType="textEmailAddress" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         style="@style/Widget.TextInputLayout"
-        android:id="@+id/password_input"
-        app:layout_constraintTop_toBottomOf="@+id/email_input"
+        android:id="@+id/passwordInput"
+        app:layout_constraintTop_toBottomOf="@+id/mobileInput"
         android:layout_marginTop="16dp"
         app:passwordToggleTint="@color/color_input_hint"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
         <android.support.design.widget.TextInputEditText
             style="@style/Widget.TextEdit"
-            android:id="@+id/password_input_edit"
+            android:id="@+id/passwordInputEt"
             android:hint="@string/password_hint"
             android:inputType="textPassword" />
     </android.support.design.widget.TextInputLayout>
@@ -62,14 +62,14 @@
         android:textStyle="bold"
         android:textSize="20sp"
         android:text="@string/forgot_password"
-        app:layout_constraintTop_toBottomOf="@+id/password_input"
+        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
         android:layout_marginTop="48dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
 
     <com.karyar.mohsen.karyar.customviews.VerticalTextView
-        android:id="@+id/caption"
+        android:id="@+id/loginBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
