--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
   <color name="color_log_in">#94019c8f</color>
   <color name="color_sign_up">#93303f9f</color>
 
+  <color name="material_green">#70B79E</color>
 
   <color name="color_logo_log_in">#b4faf5</color>
   <color name="color_logo_sign_up">#bbc4fd</color>
